--- a/index.html
+++ b/index.html
@@ -1,90 +1,126 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<head>
+<meta charset="utf-8">
+<title>Katrine's Home</title>
+<link href="css/index.css" rel="stylesheet" type="text/css">
+<link href="css/jquery.fancybox.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="js/jquery.fancybox.js"></script>
+<script type="text/javascript">
+	$(document).ready(function(e) {
+        $('.nav_icon li').hover(function(){
+			$(this).find('.two_code').css('display','block')},function(){
+			$(this).find('.two_code').css('display','none')
+			})
+		$('.music').click(function(){var oMusic=document.getElementById('play_music')
+		if($('.music>div').hasClass('music_img')){
+			$('.music>div').removeClass() 
+			oMusic.pause()}
+		else{$('.music>div').addClass('music_img')
+			oMusic.play()}
+		})
+		$('.fancybox').fancybox();
+    });
+</script>
+</head>
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Katrinezhu.GitHub.io by katrinezhu</title>
-  </head>
-
-  <body>
-    <a id="forkme_banner" href="https://github.com/katrinezhu">View on GitHub</a>
-    <div class="shell">
-
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Katrinezhu.GitHub.io</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
-
-      <div id="no-downloads">
-        <span class="inner">
-        </span>
-      </div>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/katrinezhu">katrinezhu</a> can be found on <a href="https://github.com/katrinezhu">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+<body>
+<header>
+	<nav>
+    	<ul class="nav_main">
+        	<li><a href="#" class="home">Home</a></li>
+            <li><a href="#about_me">About me</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#" class="f_link">Friendly link</a></li>
+        </ul>
+        <ul class="nav_icon">
+        	<li><a href="#" class="qq"></a><div class="two_code"><img src="images/two_code2.jpg"/></div></li>
+            <li><a href="#" class="wechat"></a><div class="two_code"><img src="images/two_code.jpg"/></div></li>
+            <li><a href="#" class="blog"></a><div class="two_code"><img src="images/two_code.jpg"/></div></li>
+        </ul>
+    </nav>
+</header>
+<section id="one">
+  <div class="banner_img"></div>
+  <div class="banner">
+  		<div class="blank"></div>
+    	<div class="banner_btn"><a href="#about_me">See More</a></div>
     </div>
-
-    
-  </body>
+</section>
+<section id="two">
+	<h2><a href="#about_me" name="about_me">关于·我</a></h2>
+    <h3>About me</h3>
+    <div class="about_me">
+    	<div class="photo">
+        	<div class="photo_img"></div>
+            <p>I AM <span>KATRINE.</span></p>
+        </div>
+        <div class="me_right">
+        	<div class="me_right_top">
+            	<p>I'M A UI<br/>DESIGNER</p>
+            </div>
+            <p>朱可青，UI设计师<br/>
+典型狮子座女生性格，外向开朗<br/>
+爱好瑜珈、读书、旅行、涂色等<br/>
+喜欢接近大自然和美的事物 <br/>
+崇尚简约的设计风格<br/>
+热衷于学习新的知识，学习能力强</p>
+        </div>
+    </div>
+    <h2>我的技能</h2>
+    <h3>My skill</h3>
+    <ul class="skill">
+    	<li class="ps"></li>
+        <li class="flash"></li>
+        <li class="ai"></li>
+        <li class="ae"></li>
+        <li class="dw"></li>
+    </ul>
+</section>
+<section id="three">
+	<h2>我的经历</h2>
+    <h3>My experience</h3>
+    <ul>
+    	<li>2009.9-2013.6<br/>中南林业科技大学<br/>本科 园林设计</li>
+        <li class="period2">2013.2-2013.5<br/>湖南华隆房地产公司<br/>实习 设计助理</li>
+        <li class="period3">2013.9-2015.8<br/>纽卡斯尔大学<br/>硕士  建筑，规划和景观</li>
+        <li class="period4">2015.9-2016.1<br/>火星时代实训基地<br/>视觉设计培训</li>
+        <li class="period5">2016.1~<br/>期待更多</li>
+    </ul>
+</section>
+<section id="four">
+	<h2><a href="#portfolio" name="portfolio">作品集</a></h2>
+    <h3>Portfolio</h3>
+    <div class="four_inner">
+    	<div class="port_l"><a class="fancybox" href="images/big1.jpg" data-fancybox-group="gallery"><img src="images/port1.jpg"/><div class="flash1"></div></a></div>
+        <div class="port_r">
+        	<div class="port_r_t"><a class="fancybox" href="images/big2.jpg" data-fancybox-group="gallery"><img src="images/port2.jpg"/><div class="flash2"></div></a></div>
+            <div class="port_r_b">
+            	<div class="port_r_b_l"><a class="fancybox" href="images/big3.jpg" data-fancybox-group="gallery"><img src="images/port3.jpg"/><div class="flash3"></div></a></div>
+                <div class="port_r_b_r"><a  class="fancybox" href="images/big4.jpg" data-fancybox-group="gallery"><img src="images/port4.jpg"/><div class="flash4"></div></a></div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="five">
+  <div class="five_inner">
+    <div class="five_icon"></div>
+    <h4><a href="#contact" name="contact">Contact me</a></h4>
+    <form>
+    	<input type="text" placeholder="Name"/><input type="text" placeholder="E-mail" /><input type="text" placeholder="Subject" /><br/>
+        <textarea placeholder="Message"></textarea><br/>
+        <input type="button" value="Send message" class="btn"/>
+    </form>
+    </div>
+</section>
+<footer>
+<div class="back_top"><a href="#">︿</a></div>
+<div class="music">
+	<div class="music_img"><img src="images/icon3.png"/></div>
+</div>
+<audio src="media/music.mp3" id="play_music" autoplay></audio>
+</footer>
+</body>
 </html>
