--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <h3>My experience</h3>
     <ul>
     	<li>2009.9-2013.6<br/>中南林业科技大学<br/>本科 园林设计</li>
-        <li class="period2">2013.2-2013.5<br/>湖南华隆房地产公司<br/>实习 设计助理</li>
-        <li class="period3">2013.9-2015.8<br/>纽卡斯尔大学<br/>硕士  建筑，规划和景观</li>
+        <li class="period2">2013.6-2014.5<br/>湖南华隆房地产公司<br/>设计助理</li>
+        <li class="period3">2014.8-2015.9<br/>纽卡斯尔大学<br/>硕士  建筑，规划和景观</li>
         <li class="period4">2015.9-2016.1<br/>火星时代实训基地<br/>视觉设计培训</li>
         <li class="period5">2016.1~<br/>期待更多</li>
     </ul>
